# ml-cookiecutter-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
