[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Projet ML généré avec Cookiecutter"
authors = [
    { name = "{{ cookiecutter.author }}" }
]
requires-python = ">= {{ cookiecutter.python_version }}"
readme = "README.md"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py{{ cookiecutter.python_version | replace('.', '') }}"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]